--- a/index.html
+++ b/index.html
@@ -3,97 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="00 Controll Team - A community playing on Simpcraft.com. Join us on Discord!">
-    <title>Team Profile</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-    <style>
-        body {
-            background-color: #f0f0f0;
-            font-family: 'Poppins', sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-        h1 {
-            color: #0068bd;
-            text-align: center;
-            font-size: 4.5rem;
-            line-height: 1;
-            margin-top: 20px;
-        }
-        h3 {
-            color: #333;
-            text-align: center;
-            font-size: 2rem;
-            margin-bottom: 20px;
-        }
-        .container {
-            width: 90%;
-            margin: 0 auto;
-            padding: 20px;
-            text-align: center;
-        }
-        .discord-link {
-            color: #00b0ff;
-            font-size: 1.5rem;
-            text-decoration: none;
-            font-weight: bold;
-        }
-        .discord-link:hover {
-            text-decoration: underline;
-        }
-        .content {
-            background-color: #000000c0;
-            color: #f7f7f7;
-            padding: 30px;
-            border-radius: 10px;
-            margin-bottom: 20px;
-        }
-        dl {
-            color: #333;
-            font-size: 1.5rem;
-            margin-top: 20px;
-        }
-        dt {
-            font-weight: bold;
-        }
-        iframe {
-            max-width: 100%;
-            border-radius: 10px;
-            margin-top: 20px;
-        }
-        @media (max-width: 768px) {
-            h1 {
-                font-size: 3rem;
-            }
-            h3 {
-                font-size: 1.5rem;
-            }
-            dl {
-                font-size: 1.2rem;
-            }
-        }
-    </style>
+    <title>teamprofile</title>
 </head>
 <body>
-    <div class="container">
-        <h1>00 Controll Team</h1>
-        <h3>Nice to meet you!</h3>
-        
-        <div class="content">
-            <p>Join our <a href="https://discord.gg/T64k8dvF9f" class="discord-link" target="_blank">Discord</a> community!</p>
-        </div>
-        
-        <dl>
-            <dt>What kind of team are we?</dt>
-            <dd>We usually play on <strong>Simpcraft.com</strong></dd>
-            <dt>What is SIMPCRAFT?</dt>
-            <dd>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/cOqAqbDDxaE?si=71Lue877RRJ9c2QH"
-                        title="SIMPCRAFT INFO" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope;
-                        picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-                </iframe>
-            </dd>
-        </dl>
-    </div>
+<h1>00 controll team</h1>
+<h3>nice to meet you</h3>
+<div>
+    <p>
+        Our<a href="https://discord.gg/T64k8dvF9f">discord</a>
+    </p>
+</div>
+<dl>
+    <dt>What kind of team!</dt>
+    <dd>we usually play simpcraft.com</dd>
+    <dt>What is SIMPCRAFT?</dt>
+    <dd>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/cOqAqbDDxaE?si=71Lue877RRJ9c2QH"
+                title="SIMPCRAFT INFO" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope;
+        picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+        </iframe>
+    </dd>
+</dl>
 </body>
 </html>
+<style>
+    body {
+        background-color: #f0f0f0;
+    }
+    h1 {
+        color: #0068bd;
+        text-align: center;
+        font-size: 4.5rem;
+        line-height: 1;
+    }
+    h3 {
+        color: rgb(0, 0, 0);
+        text-align: center;
+        font-size: 2rem;
+    }
+    div {
+        color: #f7f7f7;
+        text-align: center;
+        font-size: 3rem;
+        line-height: 1;
+        background-color: #000000c0;
+    }
+    dl {
+        color: #000000;
+        font-size: 2rem;
+    }
+
+    .container {
+        width: 90%;
+        text-align: center;
+    }
+
+    .first-sentence {
+        font-weight: bold;
+    }
+</style>
+
+
